y.output
   0  $accept : statement_list $end

   1  statement_list : statement
   2                 | statement_list statement

   3  statement : FLOAT
   4            | INT

   5  $$1 :

   6  $$2 :

   7  statement : OPEN $$1 statement_list $$2 CLOSE
   8            | NAME
   9            | op

  10  op : PLUS
  11     | MINUS
  12     | DIVIDE
  13     | MULTIPLY
  14     | LT
  15     | GT
  16     | LTE
  17     | GTE
  18     | EQUAL
  19     | ASSIGN
  20     | APPLY
  21     | DOT
  22     | FETCH
  23     | WHILE
  24     | DUP
  25     | UMINUS
  26     | IF
  27     | NOT
  28     | CAR
  29     | CDR
  30     | NIL
  31     | CONS

state 0
	$accept : . statement_list $end  (0)

	IF  shift 1
	DOT  shift 2
	OPEN  shift 3
	PLUS  shift 4
	MINUS  shift 5
	DIVIDE  shift 6
	MULTIPLY  shift 7
	LT  shift 8
	GT  shift 9
	LTE  shift 10
	GTE  shift 11
	EQUAL  shift 12
	ASSIGN  shift 13
	APPLY  shift 14
	NAME  shift 15
	FLOAT  shift 16
	FETCH  shift 17
	WHILE  shift 18
	INT  shift 19
	DUP  shift 20
	UMINUS  shift 21
	NOT  shift 22
	CAR  shift 23
	CDR  shift 24
	NIL  shift 25
	CONS  shift 26
	.  error

	statement_list  goto 27
	op  goto 28
	statement  goto 29


state 1
	op : IF .  (26)

	.  reduce 26


state 2
	op : DOT .  (21)

	.  reduce 21


state 3
	statement : OPEN . $$1 statement_list $$2 CLOSE  (7)
	$$1 : .  (5)

	.  reduce 5

	$$1  goto 30


state 4
	op : PLUS .  (10)

	.  reduce 10


state 5
	op : MINUS .  (11)

	.  reduce 11


state 6
	op : DIVIDE .  (12)

	.  reduce 12


state 7
	op : MULTIPLY .  (13)

	.  reduce 13


state 8
	op : LT .  (14)

	.  reduce 14


state 9
	op : GT .  (15)

	.  reduce 15


state 10
	op : LTE .  (16)

	.  reduce 16


state 11
	op : GTE .  (17)

	.  reduce 17


state 12
	op : EQUAL .  (18)

	.  reduce 18


state 13
	op : ASSIGN .  (19)

	.  reduce 19


state 14
	op : APPLY .  (20)

	.  reduce 20


state 15
	statement : NAME .  (8)

	.  reduce 8


state 16
	statement : FLOAT .  (3)

	.  reduce 3


state 17
	op : FETCH .  (22)

	.  reduce 22


state 18
	op : WHILE .  (23)

	.  reduce 23


state 19
	statement : INT .  (4)

	.  reduce 4


state 20
	op : DUP .  (24)

	.  reduce 24


state 21
	op : UMINUS .  (25)

	.  reduce 25


state 22
	op : NOT .  (27)

	.  reduce 27


state 23
	op : CAR .  (28)

	.  reduce 28


state 24
	op : CDR .  (29)

	.  reduce 29


state 25
	op : NIL .  (30)

	.  reduce 30


state 26
	op : CONS .  (31)

	.  reduce 31


state 27
	$accept : statement_list . $end  (0)
	statement_list : statement_list . statement  (2)

	$end  accept
	IF  shift 1
	DOT  shift 2
	OPEN  shift 3
	PLUS  shift 4
	MINUS  shift 5
	DIVIDE  shift 6
	MULTIPLY  shift 7
	LT  shift 8
	GT  shift 9
	LTE  shift 10
	GTE  shift 11
	EQUAL  shift 12
	ASSIGN  shift 13
	APPLY  shift 14
	NAME  shift 15
	FLOAT  shift 16
	FETCH  shift 17
	WHILE  shift 18
	INT  shift 19
	DUP  shift 20
	UMINUS  shift 21
	NOT  shift 22
	CAR  shift 23
	CDR  shift 24
	NIL  shift 25
	CONS  shift 26
	.  error

	op  goto 28
	statement  goto 31


state 28
	statement : op .  (9)

	.  reduce 9


state 29
	statement_list : statement .  (1)

	.  reduce 1


state 30
	statement : OPEN $$1 . statement_list $$2 CLOSE  (7)

	IF  shift 1
	DOT  shift 2
	OPEN  shift 3
	PLUS  shift 4
	MINUS  shift 5
	DIVIDE  shift 6
	MULTIPLY  shift 7
	LT  shift 8
	GT  shift 9
	LTE  shift 10
	GTE  shift 11
	EQUAL  shift 12
	ASSIGN  shift 13
	APPLY  shift 14
	NAME  shift 15
	FLOAT  shift 16
	FETCH  shift 17
	WHILE  shift 18
	INT  shift 19
	DUP  shift 20
	UMINUS  shift 21
	NOT  shift 22
	CAR  shift 23
	CDR  shift 24
	NIL  shift 25
	CONS  shift 26
	.  error

	statement_list  goto 32
	op  goto 28
	statement  goto 29


state 31
	statement_list : statement_list statement .  (2)

	.  reduce 2


state 32
	statement_list : statement_list . statement  (2)
	statement : OPEN $$1 statement_list . $$2 CLOSE  (7)
	$$2 : .  (6)

	IF  shift 1
	DOT  shift 2
	OPEN  shift 3
	PLUS  shift 4
	MINUS  shift 5
	DIVIDE  shift 6
	MULTIPLY  shift 7
	LT  shift 8
	GT  shift 9
	LTE  shift 10
	GTE  shift 11
	EQUAL  shift 12
	ASSIGN  shift 13
	APPLY  shift 14
	NAME  shift 15
	FLOAT  shift 16
	FETCH  shift 17
	WHILE  shift 18
	INT  shift 19
	DUP  shift 20
	UMINUS  shift 21
	NOT  shift 22
	CAR  shift 23
	CDR  shift 24
	NIL  shift 25
	CONS  shift 26
	CLOSE  reduce 6

	op  goto 28
	statement  goto 31
	$$2  goto 33


state 33
	statement : OPEN $$1 statement_list $$2 . CLOSE  (7)

	CLOSE  shift 34
	.  error


state 34
	statement : OPEN $$1 statement_list $$2 CLOSE .  (7)

	.  reduce 7


37 terminals, 6 nonterminals
32 grammar rules, 35 states
